--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0%;padding: 0%;border: border-box;
     }
@@ -684,3 +685,8 @@ footer a:hover {
     font-size: 0.7rem;
   }
 }
+
+
+
+
+/* Add these styles to your style.css file */
